# singingshark

./: README.md  pyproject.toml
src/singingshark/: __init__.py  cache.py  cli.py  formatters.py  logger.py  parsers.py  speakers.py  writers.py
src/singingshark/templates/: conversation.j2  default.j2  json.j2  markdown.j2  no_timestamps.j2  plain.j2
